# clinglite

./: .gitignore  .gitmodules  API.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  basic.cpp  crash_recovery.cpp  error_handling.cpp  pch_generation.cpp  repl.cpp  session.cpp  value_types.cpp
include/clinglite/: clinglite.h  msvc_jit_exports.h
patches/: 0001-noruntime-atexit-guard.patch  0002-msvc-clang-build-static.patch  0003-fix-declunloader-usingshadowdecl-crash.patch  0004-redirectable-cling-outs.patch  0005-build-userinterface-unconditionally.patch  0006-libcling-link-clanginterpreter.patch  0007-disable-concurrent-compilation.patch  0008-msvc-skip-filesystem-printvalue.patch
plugins/: CMakeLists.txt
plugins/common/: clinglite_plugin_helpers.cmake
plugins/linux/: CMakeLists.txt  linux_plugin_setup.cpp  linux_plugin_setup.h
plugins/template/: CMakeLists.txt  README.md  template_plugin_setup.cpp  template_plugin_setup.h
plugins/winsdk/: CMakeLists.txt  winsdk_plugin_setup.cpp  winsdk_plugin_setup.h
python/: CMakeLists.txt
python/clinglite/: __init__.py  _core.pyi
python/src/: bind_clinglite.cpp
scripts/: apply_patches.py  build_cling.py  build_clinglite.py
src/: clinglite.cpp
tools/: idgen.cpp  pchgen.cpp
